data/all_generated_tests/raw_wast_tests/br_if_InfiniteLoops_1545.wast
;; 6. **Test Description**: Set up `br_if` in a loop where the label index is at the edge of valid bounds. This test will check if out-of-bound label access is handled properly.    - **Constraint Checked**: Out-of-bound label access checks.    - **Relation to Infinite Loops**: Mismanagement of label bounds may lead to invalid jumps, thus trapping execution within a loop.

(assert_invalid
  (module
    (func $out-of-bound-label
      (loop $outer (result i32)
        (br_if 2 (i32.const 1))  ;; Invalid label index, as only index 0 and possibly 1 are valid.
        (i32.const 0)
      )
      (i32.const 0)
    )
  )
  "unknown label"
)